--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ prepare:
         CONTEXT=tag
         STAGE=release
       else
+        VERSION=$(date +"%Y.%m")
         BUILDNO=$(relmanager_client genbuildno ${RELEASE_HUB_PROJECT} ${VERSION}-SNAPSHOT)
         VERSION=${VERSION}-SNAPSHOT.${BUILDNO}
         BRANCH=${CI_COMMIT_REF_NAME}
