--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ cache:
   paths:
     - .m2/repository
 
+
 stages:
 - prepare
 - sources
@@ -15,6 +16,9 @@ variables:
   CONTEXT: commit
   TAG_BRANCH: stable
   MAVEN_OPTS: "-Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository"
+  http_proxy: "http://git.red-soft.biz:3128"
+  https_proxy: "http://git.red-soft.biz:3128"
+  no_proxy: localhost,172.0.0.0/8,127.0.0.0/8,.red-soft.biz,redis
 
 prepare:
   tags:
