--- a/modules/plugins/fbplugin-impl/pom.xml
+++ b/modules/plugins/fbplugin-impl/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.executequery</groupId>
     <artifactId>RedExpert-parent</artifactId>
-    <version>2021.10</version>
+    <version>2022.01-RC.1</version>
     <relativePath>../../../pom.xml</relativePath>
   </parent>
 
