--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -14,7 +14,7 @@
         <groupId>org.executequery</groupId>
         <artifactId>RedExpert-parent</artifactId>
         <relativePath>../../pom.xml</relativePath>
-        <version>2021.10</version>
+        <version>2022.01-RC.1</version>
     </parent>
 
     <dependencies>
