Fix copying documentation on windows

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -190,7 +190,7 @@ build:windows:
     - mv modules/redexpert/target/config "${DIST}"
     - mv modules/redexpert/target/lib "${DIST}"
     - cp -r license/ "${DIST}"
-    - cp -r "${CI_PROJECT_DIR}"/dist/guide/ "${DIST}"
+    - cp -r ${CI_PROJECT_DIR}/dist/guide/ ${DIST}/
     - cp guide/RedExpert_Guide-ru.pdf ${DIST}/guide/
     - mv modules/redexpert/target/LICENSE.txt "${DIST}"
     - mv modules/redexpert/target/red_expert.ico "${DIST}"
