--- a/modules/plugins/trace-parser/pom.xml
+++ b/modules/plugins/trace-parser/pom.xml
@@ -8,7 +8,7 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>${antlr.version}</version>
+            <version>4.10</version>
         </dependency>
     </dependencies>
 
@@ -33,7 +33,7 @@
             <plugin>
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr4-maven-plugin</artifactId>
-                <version>${antlr.version}</version>
+                <version>4.10</version>
                 <configuration>
                     <sourceDirectory>${pom.basedir}/../../../src/org/underworldlabs/traceparser</sourceDirectory>
                     <outputDirectory>${pom.basedir}/../../../src/org/underworldlabs/traceparser</outputDirectory>
