--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>${antlr.version}</version>
+            <version>4.10</version>
         </dependency>
 
         <dependency>
