add settings for new connection at opening .fdb

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -13,6 +13,9 @@ startup.display.splash=true
 startup.display.openwindow=1
 startup.display.lookandfeel=EXECUTE_QUERY_GRADIENT
 startup.connection.name=noconn
+startup.default.connection.username=SYSDBA
+startup.default.connection.password=masterkey
+startup.default.connection.charset=UTF8
 startup.version.check=true
 startup.unstableversions.load=false
 startup.majorversions.load=true
