--- a/modules/plugins/fbplugin-impl/pom.xml
+++ b/modules/plugins/fbplugin-impl/pom.xml
@@ -34,17 +34,17 @@
     <dependency>
       <groupId>ru.red-soft.jdbc</groupId>
       <artifactId>jaybird-jdk18</artifactId>
-      <version>4.0.7</version>
+      <version>${jaybird4.version}</version>
     </dependency>
     <dependency>
       <groupId>ru.red-soft.jdbc</groupId>
       <artifactId>jaybird-cryptoapi-jdk18</artifactId>
-      <version>4.0.7</version>
+      <version>${jaybird4.version}</version>
     </dependency>
     <dependency>
       <groupId>ru.red-soft.jdbc</groupId>
       <artifactId>fbclient</artifactId>
-      <version>4.0.7</version>
+      <version>${jaybird4.version}</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
@@ -92,7 +92,7 @@
                 <artifactItem>
                   <groupId>ru.red-soft.jdbc</groupId>
                   <artifactId>jaybird-jdk18</artifactId>
-                  <version>3.0.27</version>
+                  <version>${jaybird3.version}</version>
                   <type>jar</type>
                   <outputDirectory>../../../lib</outputDirectory>
                   <destFileName>jaybird-3.jar</destFileName>
@@ -107,7 +107,7 @@
                 <artifactItem>
                   <groupId>ru.red-soft.jdbc</groupId>
                   <artifactId>jaybird-cryptoapi-jdk18</artifactId>
-                  <version>3.0.27</version>
+                  <version>${jaybird3.version}</version>
                   <type>jar</type>
                   <outputDirectory>../../../lib</outputDirectory>
                   <destFileName>jaybird-cryptoapi-3.jar</destFileName>
@@ -139,7 +139,7 @@
                 <artifactItem>
                   <groupId>ru.red-soft.jdbc</groupId>
                   <artifactId>jaybird-jdk18</artifactId>
-                  <version>3.0.27</version>
+                  <version>${jaybird3.version}</version>
                   <type>jar</type>
                   <outputDirectory>../../redexpert/target/lib</outputDirectory>
                   <destFileName>jaybird-3.jar</destFileName>
@@ -154,7 +154,7 @@
                 <artifactItem>
                   <groupId>ru.red-soft.jdbc</groupId>
                   <artifactId>jaybird-cryptoapi-jdk18</artifactId>
-                  <version>3.0.27</version>
+                  <version>${jaybird3.version}</version>
                   <type>jar</type>
                   <outputDirectory>../../redexpert/target/lib</outputDirectory>
                   <destFileName>jaybird-cryptoapi-3.jar</destFileName>
