--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -81,6 +81,7 @@ editor.display.results=true
 editor.display.linehighlight=true
 editor.display.toolsPanel=true
 editor.autocomplete.on=true
+editor.autocomplete.only.hotkey=false
 editor.autocomplete.keywords.on=true
 editor.autocomplete.schema.on=true
 editor.undo.count=200
