--- a/modules/plugins/sql-parser/pom.xml
+++ b/modules/plugins/sql-parser/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.executequery</groupId>
         <artifactId>RedExpert-parent</artifactId>
-        <version>2023.01-RC.0</version>
+        <version>2023.01</version>
         <relativePath>../../../pom.xml</relativePath>
     </parent>
     <version>1.0</version>
