--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <groupId>org.executequery</groupId>
     <artifactId>RedExpert-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2023.01-RC.0</version>
+    <version>2023.01</version>
     <modules>
         <module>modules/plugins/fbplugin</module>
         <module>modules/plugins/fbplugin-impl</module>
