--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -199,6 +199,7 @@
                     <include>**/*.license</include>
                     <include>**/*.html</include>
                     <include>**/*.notes</include>
+                    <include>**/*.profile</include>
                 </includes>
                 <excludes>
                     <exclude>**/eq.system.properties</exclude>
