--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -282,6 +282,14 @@ deploy:
   image: registry.red-soft.biz:5000/utils/red-release-manager/client:master
   script:
     - test -d test-results && for f in $(find test-results -name \*.xml); do printf "testpack $(basename ${f/.xml})\nfile $f\nend\n"; done >> .ci/artifacts || true
+    - |
+      for d in $(find test-results/* -maxdepth 1 -type d | sed 's/test-results\///'); do
+        printf "testpack $d\n";
+        for t in $(find test-results/$d -name \*.xml); do
+          printf "file $t\n";
+        done;
+        printf "end\n";
+      done >> .ci/artifacts || true
     - relmanager_client deploy ${RELEASE_HUB_PROJECT} ${VERSION} --artifacts .ci/artifacts --ci_url ${CI_URL} --context ${CONTEXT} --branch ${BRANCH} --commit ${CI_COMMIT_SHA} --stage ${STAGE}
   only:
     variables:
