--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -225,7 +225,7 @@ test:windows:
     - proxmox
     - tester
   variables:
-    PROXMOX_TEMPLATE: template-windows-7-x64-tester
+    PROXMOX_TEMPLATE: testing-re-test-nikita
     JAVA_HOME: c:\Program Files\Java\jdk8
     ErrorActionPreference: STOP
     DIST: ${CI_PROJECT_DIR}\dist\windows-${ARCH}
@@ -241,20 +241,14 @@ test:windows:
    - cd $TEST_DIR
    - unzip -q ${CI_PROJECT_DIR}\dist-src\RedExpert-$env:VERSION-src.zip
    - cd $DIST\bin
-   - $USERNAME = 'jenkins'
-   - $PASSWORD = 'jenkins'
-   - $SECURITYPASSWORD = ConvertTo-SecureString $PASSWORD -AsPlainText -Force
-   - $CREDENTIAL = New-Object System.Management.Automation.PSCredential ($USERNAME, $SECURITYPASSWORD)
    - |
-      Invoke-Command -ComputerName localhost -Credential $CREDENTIAL -ScriptBlock {
-        if ($env:ARCH -eq "x86_64")
-        {
-          start-process .\RedExpert64.exe
-        }
-        else
-        {
-          start-process .\RedExpert.exe
-        }
+      if ($env:ARCH -eq "x86_64")
+      {
+        start-process .\RedExpert64.exe
+      }
+      else
+      {
+        start-process .\RedExpert.exe
       }
   script:
    - cd $TEST_DIR\RedExpert-$env:VERSION\ci
