--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>modules/plugins/fbplugin</module>
         <module>modules/plugins/fbplugin-impl</module>
+        <module>modules/plugins/fbplugin-impl5</module>
         <module>modules/plugins/sql-parser</module>
         <module>modules/plugins/sqlLexer</module>
         <module>modules/plugins/trace-parser</module>
