--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -40,19 +40,19 @@
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-all</artifactId>
-            <version>1.14</version>
+            <version>1.16</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-swing</artifactId>
-            <version>1.14</version>
+            <version>1.16</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-codec</artifactId>
-            <version>1.14</version>
+            <version>1.16</version>
         </dependency>
 
         <dependency>
@@ -197,6 +197,7 @@
                 <includes>
                     <include>**/*.properties</include>
                     <include>**/*.png</include>
+                    <include>**/*.svg</include>
                     <include>**/*.gif</include>
                     <include>**/*.xml</include>
                     <include>**/*.codes</include>
