--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -181,11 +181,20 @@
             <artifactId>rsyntaxtextarea</artifactId>
             <version>3.3.3</version>
         </dependency>
+
         <dependency>
             <groupId>org.japura</groupId>
             <artifactId>japura-gui</artifactId>
             <version>7.5.2</version>
         </dependency>
+
+        <!-- https://github.com/vertical-blank/sql-formatter -->
+        <dependency>
+            <groupId>com.github.vertical-blank</groupId>
+            <artifactId>sql-formatter</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
