See RS-93007 - Fix formatting of TIMESTAMP resultSet values. - Add ability to set the template separately for DATE, TIME and TIMESTAMP resultSet values.

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -132,7 +132,9 @@ results.table.cell.other.background.colour=-1
 results.table.cell.changed.background.colour=-1
 results.table.cell.deleted.background.colour=-1498604
 results.table.cell.new.background.colour=-1
-resuts.date.pattern=
+results.date.pattern=
+results.time.pattern=
+results.timestamp.pattern=
 results.table.cell.null.text=<NULL>
 results.table.cell.null.background.colour=-5390348
 results.table.cell.null.adding.background.colour=-5390348
