--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,7 +120,8 @@ build:linux:
     - builder
     - x86_64
   variables:
-    M2_HOME: /opt/apache-maven-3.5.4/
+    MAVEN_VERSION: 3.9.2;
+    M2_HOME: /opt/apache-maven-${MAVEN_VERSION}/
     QMAKE: qmake-qt4
     DIST: ${CI_PROJECT_DIR}/dist/linux-${ARCH}
   before_script:
@@ -129,8 +130,8 @@ build:linux:
     - yum group install -y "Development Tools"
     - yum install -y ca-certificates
     - cd /opt
-    - wget http://www.apache.org/dist/maven/maven-3/3.5.4/binaries/apache-maven-3.5.4-bin.tar.gz
-    - tar xzf apache-maven-3.5.4-bin.tar.gz
+    - wget http://www.apache.org/dist/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz
+    - tar xzf apache-maven-${MAVEN_VERSION}-bin.tar.gz
     - export PATH=${M2_HOME}/bin:${PATH}
     - export JAVA_HOME=`java -XshowSettings:properties -version 2>&1|grep "java.home"|cut -d "=" -f 2|tr -d " "|rev | cut -c 4- | rev`
   script:
