--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -195,6 +195,13 @@
             <version>2.0.3</version>
         </dependency>
 
+        <!-- https://github.com/java-diff-utils/java-diff-utils -->
+        <dependency>
+            <groupId>io.github.java-diff-utils</groupId>
+            <artifactId>java-diff-utils</artifactId>
+            <version>4.12</version>
+        </dependency>
+
     </dependencies>
 
     <build>
