--- a/modules/redexpert/pom.xml
+++ b/modules/redexpert/pom.xml
@@ -202,6 +202,12 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
