Add ability to specify custom JVM path (RS-107303)

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -19,6 +19,8 @@ startup.default.connection.charset=UTF8
 startup.version.check=true
 startup.unstableversions.load=false
 startup.majorversions.load=true
+startup.java.path=
+startup.log.path=
 # ---------------------------
 # Appearance settings
 # ---------------------------
