Fix editor.logging.enabled setting applying and using (RS-144863)

--- a/src/org/executequery/eq.default.properties
+++ b/src/org/executequery/eq.default.properties
@@ -89,7 +89,7 @@ editor.history.count=100
 editor.display.linehighlight.colour=-52
 editor.open.on-connect=true
 editor.logging.verbose=true
-editor.logging.enabled=false
+editor.logging.enabled=true
 editor.logging.path=
 editor.logging.backups=5
 editor.caret.colour=-65536
