fix after merge

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ variables:
   RELEASE_HUB_PROJECT: red_expert
   CI_URL: ${CI_PROJECT_URL}/pipelines/${CI_PIPELINE_ID}
   CONTEXT: commit
-  TAG_BRANCH: master
+  TAG_BRANCH: stable
   MAVEN_OPTS: "-Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository"
   http_proxy: "http://git.red-soft.biz:3128"
   https_proxy: "http://git.red-soft.biz:3128"
