--- a/src/org/executequery/eq.system.properties
+++ b/src/org/executequery/eq.system.properties
@@ -23,7 +23,7 @@ help.version=3.2.0
 check.version.url=https://api.github.com/repos/redsoftbiz/executequery/releases/latest
 check.version.notes.url=https://api.github.com/repos/redsoftbiz/executequery/releases/latest
 re.version=${project.version}
-branch=master
+branch=stable
 branch.next.major.version=
 # about panel credits
 about.panel.credits=Takis Diakoumis|Original Developer,\
